k8s/medrec.traefik.path.route.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-pathrouting-1
  namespace: medrec-domain-ns
  annotations:
    kubernetes.io/ingress.class: traefik
    #ingress.kubernetes.io/rewrite-target: /
    #ingress.kubernetes.io/rule-type: PathPrefix
spec:
  rules:
  - host:
    http:
      paths:
      - path: /
        backend:
          serviceName: medrec-cluster-cluster-medrec
          servicePort: 8001
      - path: /physician
        backend:
          serviceName: physicianservice
          servicePort: 9001
      - path: /console
        backend:
          serviceName: medrec-admin-server
          servicePort: 7011
